# localsolana_contracts

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
programs/local_solana_migrate/: Cargo.toml
programs/local_solana_migrate/src/: lib.rs
tests/: local_solana_migrate.ts  local_solana_migrate.txt  old.txt
