[package]
name = "local_solana_migrate"
version = "0.1.0"
description = "Program for Local Solana Gasless Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "local_solana_migrate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
sha2 = "0.10.8"
